# pico-air-con-w

./: CMakeLists.txt  air-con.c  main.py  main_test.py  timing.csv  timings2.csv
src/: CMakeLists.txt  cgi.cpp  main.cpp
src/fs/: cgi.html
